fixed minor nav issue on smaller screens

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ a{
 }
 a img{
     position:absolute;
-    top: 4px;
+    top: 4.5px;
     right: -1px;
 }
 h2,
@@ -406,3 +406,14 @@ footer{
             margin-bottom: 50px;
         }
     }
+
+     @media screen and (max-width:400px){
+        nav a{
+            font-size: 15px;
+        }
+
+        #logo{
+            width: 83px;
+            height: 24px;
+        }
+     }
